Added solution for Cresla Exam.
Judge:
Structure - 40/60
I/O - 15/15
Unit Tests - 14/25